Enhance solar panel functionality: implement cache invalidation on block changes, optimize sky visibility checks, and ensure immediate energy generation stop when blocked